--- a/responsive-single-column/EX/index.html
+++ b/responsive-single-column/EX/index.html
@@ -45,7 +45,7 @@
             </section>
 
             <footer>
-                Contact us at @spacepublications
+                <p>Contact us at @spacepublications</p>
             </footer>
     </body>
 </html>
