--- a/nasa/index.html
+++ b/nasa/index.html
@@ -14,17 +14,31 @@
     </header>
 
     <section class="photos">
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
-        <div class="photo"></div>
+        <div class="photo">
+            <div class="overlay">Earth</div>
+            <img src="https://cdn.pixabay.com/photo/2011/12/13/14/31/earth-11015_1280.jpg">
+        </div>
+        <div class="photo">
+            <div class="overlay">Starry Sky</div>
+            <img  src="https://cdn.pixabay.com/photo/2017/08/24/03/41/starry-sky-2675322__340.jpg">
+        </div>
+        <div class="photo">
+            <div class="overlay">Stars</div>
+            <img src="https://cdn.pixabay.com/photo/2012/11/28/10/16/stars-67616__480.jpg">
+        </div>
+        <div class="photo">
+            <div class="overlay">Moon</div>
+            <img src="https://cdn.pixabay.com/photo/2016/05/01/21/20/earth-1365995__480.jpg">
+        </div>
+        <div class="photo">
+            <div class="overlay">Milky Way</div>
+            <img src="https://cdn.pixabay.com/photo/2017/09/14/22/42/milky-way-2750627__340.jpg">
+        </div>
+        <div class="photo">
+            <div class="overlay">Astronaut</div>
+            <img src="https://cdn.pixabay.com/photo/2019/04/06/06/44/astronaut-4106766__480.jpg">
+        </div>
     </section>
 </body>
 
-</html>
+</htm
