--- a/vitrine-responsiva/index.html
+++ b/vitrine-responsiva/index.html
@@ -43,21 +43,45 @@
         <section class="products">
             <div class="wrap">
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Pocket Square</h4>
+                        <p> $44,00</p>
+                    </div>
                     <img src="assets/image_1.jpg">
                 </div>
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Bandana</h4>
+                        <p> $50,00</p>
+                    </div>
                     <img src="assets/image_2.jpg">
                 </div>
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Neckerchief</h4>
+                        <p> $35,00</p>
+                    </div>
                     <img src="assets/image_3.jpg">
                 </div>
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Pocket Square</h4>
+                        <p> $44,00</p>
+                    </div>
                     <img src="assets/image_4.jpg">
                 </div>
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Pocket Square</h4>
+                        <p> $44,00</p>
+                    </div>
                     <img src="assets/image_5.jpg">
                 </div>
                 <div class="product">
+                    <div class="overlay">
+                        <h4>Pocket Square</h4>
+                        <p> $44,00</p>
+                    </div>
                     <img src="assets/image_6.jpg">
                 </div>
             </div>
