--- a/vitrine-responsiva/index.html
+++ b/vitrine-responsiva/index.html
@@ -34,9 +34,13 @@
 
         <nav class="mid-links">
             <div class="wrap">
-                <a class="selected" href="bandanas.html">Bandanas</a>
-                <a href="accessories.html">Accessories</a>
-                <a href="bags.html">Bags</a>
+                <ul class="filters-list">
+                    <li><a class="hide-f" href="">Hide filters</a></li>
+                    <li> <a class="selected" href="bandanas.html">Bandanas</a></li>
+                   <li><a href="accessories.html">Accessories</a></li>
+                    <li><a href="bags.html">Bags</a></li>
+                </ul>
+               
             </div>
         </nav>
 
